fixed a white space issue in the editor.

--- a/app/assets/stylesheets/ui-customizations.css.scss
+++ b/app/assets/stylesheets/ui-customizations.css.scss
@@ -396,4 +396,8 @@ div.dataTables_filter {
 
 }
 
+.section-caption {
+	white-space: normal;
+}
+
 @import "_material-design-overwrites.scss";
